--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   top: 3000px;
   left: 200px;
   position: static;
-}  
+}
 
 .header {
   text-align: center;
@@ -17,7 +17,7 @@
   height: 300px;
 }
 
-.row:after {
+.row::after {
   content: "";
   display: table;
   clear: both;
